--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginTop="300dp"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
         android:queryHint="@string/hint_search"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
@@ -28,9 +30,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="407dp"
         android:layout_height="326dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintTop_toBottomOf="@id/searchView"
         app:layout_constraintVertical_bias="0.6"
         tools:itemCount="4" />
